Fix image alignment on homepage

--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -357,6 +357,7 @@
 
   img {
     max-width: 175px;
+    margin: 0 !important;
   }
 
   .posts {
